Add citation for Japanese Classical Cursive Script

--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -228,6 +228,9 @@
           <p>
             [imajuku 2024] Imajuku, Y., Clanuwat, T.: Metom (2024), https://huggingface.co/SakanaAI/Metom.
           </p>
+          <p>
+            [nijl 2016] National Institute of Japanese Literature (国文学研究資料館), Japanese Classical Cursive Script Kuzushiji Dataset（日本古典籍くずし字データセット） (2016), https://doi.org/10.20676/00000340.
+          </p>
         </div>
       </div>
     </div>
