--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -155,7 +155,7 @@
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/fig_correction.png" style="display:block; margin:0 auto; width:80%">
           <p>
-            The raw Kuzushiji document images are obtained from the Center for Open Data in the Humanities (CODH) dataset [24], held by the National Institute of Japanese Literature (NIJL).
+            The raw Kuzushiji document images are obtained from the Center for Open Data in the Humanities (CODH) dataset [nijl 2016], held by the National Institute of Japanese Literature (NIJL).
             We select 13 representative documents and exclude pages without Kuzushiji characters, resulting in a dataset of 1,000 images.
             During annotation review, 267 images are found to contain incomplete labels, which we manually correct by adding missing character bounding boxes to improve annotation quality.
           </p>
