--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -160,13 +160,12 @@
             During annotation review, 267 images are found to contain incomplete labels, which we manually correct by adding missing character bounding boxes to improve annotation quality.
           </p>
         </div>
-        <h2 class="title is-3">Challenges in Track 2: Document Binarization</h2>
+        <h2 class="title is-3">Synthetic Data Generation</h2>
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
-          <img src="./images/challenge_2.png" style="display:block; margin:0 auto; width:80%">
+          <img src="./images/fig_synthetic.png" style="display:block; margin:0 auto; width:80%">
           <p>
-            Document binarization aims to improve the accuracy of downstream OCR systems. 
-            In this task, the objective is to remove seals while preserving, or even restoring, Kuzushiji characters as much as possible. 
-            This process becomes particularly challenging when the Kuzushiji characters overlap with seals.
+            Comparison examples between raw (real) Kuzushiji documents and synthetic Kuzushiji documents. 
+            The seals in the first row are naturally and physically present in the original documents, while those in the second row are synthetically added.
           </p>
         </div>
       </div>
