--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -208,7 +208,7 @@
   <div class="container is-max-desktop content">
     <div class="license-block" style="margin-bottom: 1.5em;">
       <img src="./images/CC-BY-SA.png" alt="CC BY-SA 4.0 License" style="vertical-align: middle;">
-      This benchmark dataset is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" style="margin-left: 8px;">Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)</a>.
+      This dataset is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" style="margin-left: 8px;">Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)</a>.
     </div>
   </div>
   
