--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -178,7 +178,7 @@
           <img src="./images/fig_yolo12.png" style="display:block; margin:0 auto; width:80%">
           <br>
           <p>
-            Examples of qualitative detection results produced by YOLOv12-medium [30] on Kuzushiji document images from the constructed dataset.
+            Examples of qualitative detection results produced by YOLOv12-medium [tian 2025] on Kuzushiji document images from the constructed dataset.
           </p>
         </div>
       </div>
@@ -242,6 +242,9 @@
           </p>
           <p>
             [nijl 2016] National Institute of Japanese Literature (国文学研究資料館), Japanese Classical Cursive Script Kuzushiji Dataset（日本古典籍くずし字データセット） (2016), https://doi.org/10.20676/00000340.
+          </p>
+          <p>
+            [tian 2025] Tian, Y., Ye, Q., Doermann, D., Yolov12: Attention-centric real-time object detectors. In: Advances in Neural Information Processing Systems (2025).
           </p>
         </div>
       </div>
