--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -158,6 +158,7 @@
             The raw Kuzushiji document images are obtained from the Center for Open Data in the Humanities (CODH) dataset [nijl 2016], held by the National Institute of Japanese Literature (NIJL).
             We select 13 representative documents and exclude pages without Kuzushiji characters, resulting in a dataset of 1,000 images.
             During annotation review, 267 images are found to contain incomplete labels, which we manually correct by adding missing character bounding boxes to improve annotation quality.
+            Here are the examples of incomplete annotations in the raw dataset, where red boxes are our manual annotations and green boxes indicate the original ones.
           </p>
         </div>
         <h2 class="title is-3">Synthetic Data Generation</h2>
@@ -204,7 +205,7 @@
           <img src="./images/fig_final_output.png" style="display:block; margin:0 auto; width:100%">
           <br>
           <p>
-            Hera are Kuzushiji document images and their corresponding final outputs produced by the proposed RG-KCR framework.
+            Here are Kuzushiji document images and their corresponding final outputs produced by the proposed RG-KCR framework.
             For visualization, green bounding boxes and the associated modern Japanese characters are overlaid on the documents with a uniform font size of 64 pixels to enhance readability.
             After processing by the RG-KCR framework, readers can intuitively interpret the content of the original Kuzushiji documents.
           </p>
