--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -231,19 +231,19 @@
         <!-- Prop. -->
         <div class="content has-text-justified">
           <p>
-            [toppan 2023] TOPPAN Inc., ふみのは (Fuminoha): 古文書カメラ (Komonjo Camera) (2023), https://camera.fuminoha.jp.
+            [TOPPAN 2023] TOPPAN Inc., ふみのは (Fuminoha): 古文書カメラ (Komonjo Camera) (2023), https://camera.fuminoha.jp.
           </p>
           <p>
-            [aoike 2024] Aoike, T., Development of ndlkotenocr-lite, a lightweight ocr that runs at high speed in a cpu environment. In: IPSJ SIG Computers and the Humanities Symposium. pp. 181–186 (2024).
+            [Aoike et al. 2024] Aoike, T., Development of ndlkotenocr-lite, a lightweight ocr that runs at high speed in a cpu environment. In: IPSJ SIG Computers and the Humanities Symposium. pp. 181–186 (2024).
           </p>
           <p>
-            [imajuku 2024] Imajuku, Y., Clanuwat, T.: Metom (2024), https://huggingface.co/SakanaAI/Metom.
+            [Imajuku et al. 2024] Imajuku, Y., Clanuwat, T.: Metom (2024), https://huggingface.co/SakanaAI/Metom.
           </p>
           <p>
-            [nijl 2016] National Institute of Japanese Literature (国文学研究資料館), Japanese Classical Cursive Script Kuzushiji Dataset（日本古典籍くずし字データセット） (2016), https://doi.org/10.20676/00000340.
+            [NIJL 2016] National Institute of Japanese Literature (国文学研究資料館), Japanese Classical Cursive Script Kuzushiji Dataset（日本古典籍くずし字データセット） (2016), https://doi.org/10.20676/00000340.
           </p>
           <p>
-            [tian 2025] Tian, Y., Ye, Q., Doermann, D., Yolov12: Attention-centric real-time object detectors. In: Advances in Neural Information Processing Systems (2025).
+            [Tian et al. 2025] Tian, Y., Ye, Q., Doermann, D., Yolov12: Attention-centric real-time object detectors. In: Advances in Neural Information Processing Systems (2025).
           </p>
         </div>
       </div>
