--- a/GlassesGB/index.html
+++ b/GlassesGB/index.html
@@ -81,7 +81,15 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
+              <span class="link-block">
+                <a href="https://www.youtube.com/watch?v=mKHgXHKbJUE"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="in input-source-video"></i>
+                  </span>
+                  <span>Input Source</span>
+                </a>
+              </span>
               <span class="link-block">
                 <a href="pdf\GlassesGB.pdf"
                    class="external-link button is-normal is-rounded is-dark">
