--- a/GlassesGB/index.html
+++ b/GlassesGB/index.html
@@ -85,7 +85,7 @@
                 <a href="https://www.youtube.com/watch?v=mKHgXHKbJUE"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="in input-source-video"></i>
+                     <i class="fas fa-video"></i>
                   </span>
                   <span>Input Source</span>
                 </a>
