--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -131,8 +131,8 @@
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/fig_pipeline.png" style="display:block; margin:0 auto; width:100%">
           <h5 class="subtitle has-text-justified" style="margin-top: 15px">
-            Overview of the proposed restoration-guided Kuzushiji character recognition (RG-KCR) framework, where document restoration is introduced to mitigate seal interference prior to character classification, 
-            consisting of three stages: Kuzushiji character detection (Stage 1), Kuzushiji document restoration (Stage 2), and Kuzushiji character classification (Stage 3).
+            The pipeline of the proposed restoration-guided Kuzushiji character recognition (RG-KCR) framework consists of three stages: Kuzushiji character detection (Stage~1), Kuzushiji document restoration (Stage~2), and Kuzushiji character classification (Stage~3).
+            A training-free document restoration algorithm is introduced in Stage 2 to mitigate seal interference prior to character classification in Stage 3.
           </h5>
         </div>
         <h2 class="title is-3">Motivation</h2>
