--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -141,9 +141,9 @@
           <br>
           <p>
             To the best of our knowledge, existing Kuzushiji character recognition systems have not explicitly addressed the impact of seal interference, which frequently overlaps with characters and substantially degrades recognition performance.
-            Here are the example recognition results produced by different methods under seal interference.
-            The left column shows the input Kuzushiji characters “尚書堂梓”, while the right column presents the corresponding recognition outputs of three methods: Komonjo Camera (Fuminoha) [TOPPAN 2023], NDLkotenOCR-Lite [Aoike et al. 2024], and Metom [Imajuku et al. 2024].
-            The first row displays the raw document as input, whereas the second row shows the recognition results after applying our proposed document restoration method.
+            We present example recognition results produced by different methods under seal interference.
+            The left column shows the input Kuzushiji characters “尚書堂梓”, while the right three columns present the corresponding recognition outputs of three methods: Komonjo Camera (Fuminoha) [TOPPAN Inc., 2023], NDLkotenOCR-Lite [Aoike et al., 2024], and Metom [Imajuku et al., 2024].
+            The first row displays the raw document as input, while the second row shows the recognition results after applying our proposed document restoration method.
           </p>
         </div>
       </div>
@@ -233,7 +233,7 @@
         <!-- Prop. -->
         <div class="content has-text-justified">
           <p>
-            [TOPPAN 2023] TOPPAN Inc., ふみのは (Fuminoha): 古文書カメラ (Komonjo Camera) (2023), https://camera.fuminoha.jp.
+            [TOPPAN Inc. 2023] TOPPAN Inc., ふみのは (Fuminoha): 古文書カメラ (Komonjo Camera) (2023), https://camera.fuminoha.jp.
           </p>
           <p>
             [Aoike et al. 2024] Aoike, T., Development of ndlkotenocr-lite, a lightweight ocr that runs at high speed in a cpu environment. In: IPSJ SIG Computers and the Humanities Symposium. pp. 181–186 (2024).
