--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -165,7 +165,8 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Data Correction</h2>
+        <h2 class="title is-3">Dataset</h2>
+        <h2 class="title is-5">Data Correction</h2>
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/fig_correction.png" style="display:block; margin:0 auto; width:100%">
           <br>
