--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -171,10 +171,11 @@
           <img src="./images/fig_correction.png" style="display:block; margin:0 auto; width:100%">
           <br>
           <p>
-            The raw Kuzushiji document images are obtained from the Center for Open Data in the Humanities (CODH) dataset [NIJL 2016], held by the National Institute of Japanese Literature (NIJL).
-            We select 13 representative documents and exclude pages without Kuzushiji characters, resulting in a dataset of 1,000 images.
-            During annotation review, 267 images are found to contain incomplete labels, which we manually correct by adding missing character bounding boxes to improve annotation quality.
-            Here are the examples of incomplete annotations in the raw dataset, where red boxes are our manual annotations and green boxes indicate the original ones.
+            The raw Kuzushiji document images are obtained from the dataset provided by the Center for Open Data in the Humanities (CODH), with source materials preserved by the National Institute of Japanese Literature (NIJL) [NIJL, 2016].
+            We select 13 representative documents and exclude pages that contain no Kuzushiji characters, resulting in a final dataset of 1,000 images.
+            During the annotation review process, 267 images are found to contain incomplete labels. 
+            We manually correct these annotations by adding missing character bounding boxes to improve overall annotation quality.
+            We present representative examples of incomplete annotations in the raw dataset, where red boxes denote our manually added annotations and green boxes indicate the original ones.
           </p>
         </div>
         <h2 class="title is-3">Synthetic Data Generation</h2>
