--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -178,13 +178,13 @@
             We present representative examples of incomplete annotations in the raw dataset, where red boxes denote our manually added annotations and green boxes indicate the original ones.
           </p>
         </div>
-        <h2 class="title is-3">Synthetic Data Generation</h2>
+        <h2 class="title is-4">(2) Synthetic Data Generation</h2>
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/fig_synthetic.png" style="display:block; margin:0 auto; width:100%">
           <br>
           <p>
-            Comparison examples between raw (real) Kuzushiji documents and synthetic Kuzushiji documents. 
-            The seals in the first row are naturally and physically present in the original documents, while those in the second row are synthetically added.
+            Comparison examples between raw (real) Kuzushiji documents and synthetic Kuzushiji documents.
+            The seals in the first row are naturally present in the original documents, whereas those in the second row are synthetically added.
           </p>
         </div>
       </div>
@@ -192,7 +192,8 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Stage 1 Output</h2>
+        <h2 class="title is-3">Experiments</h2>
+        <h2 class="title is-4">(1) Visual Output of Stage 1</h2>
         <div class="content has-text-justified">
           <img src="./images/fig_yolo12.png" style="display:block; margin:0 auto; width:100%">
           <br>
@@ -205,7 +206,7 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Stage 2 Output</h2>
+        <h2 class="title is-3">(2) Visual Output of Stage 2</h2>
         <div class="content has-text-justified">
           <img src="./images/fig_restoration.png" style="display:block; margin:0 auto; width:100%">
           <br>
@@ -218,7 +219,7 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Final Output</h2>
+        <h2 class="title is-3">(3) Visual Final Output</h2>
         <div class="content has-text-justified">
           <img src="./images/fig_final_output.png" style="display:block; margin:0 auto; width:100%">
           <br>
