--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -198,7 +198,7 @@
           <img src="./images/fig_yolo12.png" style="display:block; margin:0 auto; width:100%">
           <br>
           <p>
-            Examples of qualitative detection results produced by YOLOv12-medium [Tian et al. 2025] on Kuzushiji document images from the constructed dataset.
+            Representative detection results produced by YOLOv12-medium [Tian et al., 2025] on Kuzushiji document images from the constructed dataset.
           </p>
         </div>
       </div>
