--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -211,7 +211,7 @@
           <img src="./images/fig_restoration.png" style="display:block; margin:0 auto; width:100%">
           <br>
           <p>
-            Qualitative comparison of restoration results between raw and restored Kuzushiji documents under hyperparameters &tau;<sub>r</sub> = 90 and (&tau;<sub>rg</sub>, &tau;<sub>rb</sub>) = 1.3.
+            Qualitative comparison of restoration results between raw and restored Kuzushiji documents under the hyperparameter settings of τ<sub>r</sub> = 90 and (τ<sub>rg</sub>, τ<sub>rb</sub>) = (1.3, 1.3).
           </p>
         </div>
       </div>
