--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -224,7 +224,7 @@
           <img src="./images/fig_final_output.png" style="display:block; margin:0 auto; width:100%">
           <br>
           <p>
-            Here are Kuzushiji document images and their corresponding final outputs produced by the proposed RG-KCR framework.
+            We present Kuzushiji document images and their corresponding final outputs produced by the proposed RG-KCR framework.
             For visualization, green bounding boxes and the associated modern Japanese characters are overlaid on the documents with a uniform font size of 64 pixels to enhance readability.
             After processing by the RG-KCR framework, readers can intuitively interpret the content of the original Kuzushiji documents.
           </p>
