--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -274,7 +274,7 @@
       <pre><code>
 
       </code></pre>
-    <strong>The following is the citation of the original Kuzushiji dataset; please cite it when using our benchmark dataset:</strong>
+    <strong>The following is the citation of the original Kuzushiji dataset; please cite it when using our constructed dataset:</strong>
   <pre><code>
   『日本古典籍くずし字データセット』 （国文研所蔵／CODH加工） doi:10.20676/00000340      
   </code></pre>
