--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -270,7 +270,7 @@
 
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <strong>If you use our dataset, please cite the paper below:</strong>
+    <strong>If you find our paper useful in your research, please consider citing:</strong>
       <pre><code>
 
       </code></pre>
