--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -219,7 +219,7 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-4">(3) Visual Final Output</h2>
+        <h2 class="title is-4">(3) Final Visual Output</h2>
         <div class="content has-text-justified">
           <img src="./images/fig_final_output.png" style="display:block; margin:0 auto; width:100%">
           <br>
