--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -76,7 +76,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="pdf\paper.pdf"
+                <a href="pdf\RG-KCR.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
