--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -272,7 +272,12 @@
     <h2 class="title">BibTeX</h2>
     <strong>If you find our paper useful in your research, please consider citing:</strong>
       <pre><code>
-
+        @article{ju2026rgkcr,
+          title={Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference},
+          author={Ju, Rui-Yang and Yamashita, Kohei and Kameko, Hirotaka and Mori, Shinsuke},
+          journal={arXiv preprint arXiv:2602.19086},
+          year={2026}
+        }
       </code></pre>
     <strong>The following is the citation of the original Kuzushiji dataset; please cite it when using our constructed dataset:</strong>
   <pre><code>
